@@ -33,7 +33,7 @@
       </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0">
+      <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0">
        <property name="spacing">
         <number>5</number>
        </property>
@@ -148,7 +148,7 @@
           <number>0</number>
          </property>
          <widget class="QWidget" name="page">
-          <layout class="QVBoxLayout" name="verticalLayout_7" stretch="0,0,0">
+          <layout class="QVBoxLayout" name="verticalLayout_7" stretch="0,0,0,0">
            <item>
             <widget class="QLabel" name="pitchedGroupName">
              <property name="font">
@@ -192,14 +192,14 @@
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QCheckBox" name="genKeysig">
+              <widget class="QCheckBox" name="genKeysigPitched">
                <property name="text">
                 <string>Key Signature</string>
                </property>
               </widget>
              </item>
              <item row="1" column="1">
-              <widget class="QCheckBox" name="showLedgerLines">
+              <widget class="QCheckBox" name="showLedgerLinesPitched">
                <property name="text">
                 <string>Ledger Lines</string>
                </property>
@@ -220,10 +220,37 @@
              </property>
             </spacer>
            </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout">
+             <item>
+              <widget class="QPushButton" name="newTypePitched">
+               <property name="toolTip">
+                <string>Create a new staff type of current group.</string>
+               </property>
+               <property name="text">
+                <string>Create new pitched type</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_2">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </item>
           </layout>
          </widget>
          <widget class="QWidget" name="page_2">
-          <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,0,0,0">
+          <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,0,0,0,0">
            <item>
             <widget class="QLabel" name="tablatureGroupName">
              <property name="font">
@@ -245,35 +272,21 @@
              <item row="0" column="0">
               <widget class="QCheckBox" name="genClefTablature">
                <property name="text">
-                <string>Clef</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
-              <widget class="QCheckBox" name="stemlessTablature">
-               <property name="text">
-                <string>Stemless</string>
+                <string>Show Clef</string>
                </property>
               </widget>
              </item>
              <item row="0" column="1">
               <widget class="QCheckBox" name="showBarlinesTablature">
                <property name="text">
-                <string>Barlines</string>
+                <string>Show Barlines</string>
                </property>
               </widget>
              </item>
              <item row="0" column="2">
               <widget class="QCheckBox" name="genTimesigTablature">
                <property name="text">
-                <string>Time Signature</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="2">
-              <widget class="QCheckBox" name="genDurations">
-               <property name="text">
-                <string>Duration Symbols</string>
+                <string>Show Time Signature</string>
                </property>
               </widget>
              </item>
@@ -543,12 +556,55 @@
            <item>
             <widget class="QGroupBox" name="durationsGroup">
              <property name="title">
-              <string>Duration Symbols</string>
+              <string>Note Values</string>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_4">
               <property name="bottomMargin">
                <number>0</number>
               </property>
+              <item>
+               <widget class="QFrame" name="frame_4">
+                <property name="frameShape">
+                 <enum>QFrame::NoFrame</enum>
+                </property>
+                <property name="frameShadow">
+                 <enum>QFrame::Plain</enum>
+                </property>
+                <layout class="QHBoxLayout" name="horizontalLayout_5">
+                 <property name="margin">
+                  <number>0</number>
+                 </property>
+                 <item>
+                  <widget class="QLabel" name="durSymLabel">
+                   <property name="text">
+                    <string>Shown as:</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QRadioButton" name="noteValues0">
+                   <property name="text">
+                    <string>None</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QRadioButton" name="noteValues1">
+                   <property name="text">
+                    <string>Note Symbols</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QRadioButton" name="noteValues2">
+                   <property name="text">
+                    <string>Stems and beams</string>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
+              </item>
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_10">
                 <item>
@@ -622,10 +678,34 @@
              </property>
             </spacer>
            </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_12">
+             <item>
+              <widget class="QPushButton" name="newTypeTablature">
+               <property name="text">
+                <string>Create new tablature type</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_6">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </item>
           </layout>
          </widget>
          <widget class="QWidget" name="page_3">
-          <layout class="QVBoxLayout" name="verticalLayout_8">
+          <layout class="QVBoxLayout" name="verticalLayout_8" stretch="0,0,1,1">
            <item>
             <widget class="QLabel" name="percussionGroupName">
              <property name="font">
@@ -662,36 +742,33 @@
              </property>
             </spacer>
            </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_13">
+             <item>
+              <widget class="QPushButton" name="newTypePercussion">
+               <property name="text">
+                <string>Create new percussion type</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_7">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </item>
           </layout>
          </widget>
         </widget>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QPushButton" name="newType">
-           <property name="toolTip">
-            <string>Create a new staff type of current group.</string>
-           </property>
-           <property name="text">
-            <string>Create new type</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
        </item>
       </layout>
      </item>
@@ -753,13 +830,11 @@
   <tabstop>genClefPitched</tabstop>
   <tabstop>stemlessPitched</tabstop>
   <tabstop>showBarlinesPitched</tabstop>
-  <tabstop>genKeysig</tabstop>
-  <tabstop>showLedgerLines</tabstop>
+  <tabstop>genKeysigPitched</tabstop>
+  <tabstop>showLedgerLinesPitched</tabstop>
   <tabstop>genClefTablature</tabstop>
-  <tabstop>stemlessTablature</tabstop>
   <tabstop>showBarlinesTablature</tabstop>
   <tabstop>genTimesigTablature</tabstop>
-  <tabstop>genDurations</tabstop>
   <tabstop>fretFontName</tabstop>
   <tabstop>fretFontSize</tabstop>
   <tabstop>fretY</tabstop>
@@ -773,7 +848,7 @@
   <tabstop>durFontSize</tabstop>
   <tabstop>durY</tabstop>
   <tabstop>genClefPercussion</tabstop>
-  <tabstop>newType</tabstop>
+  <tabstop>newTypePitched</tabstop>
   <tabstop>staffTypeList</tabstop>
   <tabstop>save</tabstop>
   <tabstop>load</tabstop>
