@@ -1,4 +1,5 @@
 08.jan (mi)
+      - Cosmetic changes to Staff Type Properties Dlg Box
       - In non-stemless tablature staves, stems, hooks and beams moved to a running
         strip above the staff.
 07.jan (ws)
